jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jenkins
  name: jenkins
spec:
  ports:
  - name: "jenkins"
    port: 8080
    targetPort: 8080
  selector:
    app: jenkins-rs
  type: ClusterIP
