ldap-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  ports:
  - name: "ldap"
    port: 389
    targetPort: 389
  selector:
    app: ldap-rs
  type: NodePort
