ldap-phpadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ldap-phpadmin
  name: ldap-phpadmin
spec:
  ports:
  - name: "ldap-phpadmin"
    port: 80
    targetPort: 80
  selector:
    app: ldap-phpadmin-rs
  type: NodePort
