ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-service
spec:
  ports:
  - name: "ldap"
    port: 389
    targetPort: 389
  selector:
    name: ldap
  type: NodePort
