nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
