service.yaml
#
# https://github.com/kubernetes/contrib/tree/master/ingress/controllers
#
# Used in AWS and it will create an ELB pointing at these nodes
#
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-lb
spec:
  type: NodePort
  selector:
    app: ingress-controller
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
